css/style.css
/* GENERAL */
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    color: #a3a3a3;
    /* background-color: rgba(176, 177, 108, 0.1); */
}
.background-color--std{
    background-color: #a3a3a3;
}
body .container{
    height: calc( 100vh - 80px);
    overflow: hidden;
}
a{
    text-decoration: none;
}
ul{
    list-style: none;
}
li{
    text-decoration: none;
    padding: 5px;
}
.flex{
    display: flex;
}
.wrap{
    flex-wrap: wrap;
}
.block{
    display: block;
}
.inline-block{
    display: inline-block;
}
.relative{
    position: relative;
}
.absolute{
    position: absolute;
}
.fixed{
    position: fixed;
}
/*SCROLLBAR PERSONALIZATION*/
::-webkit-scrollbar {
    width: 0px;
}
/* Handle */
::-webkit-scrollbar-thumb {
    background: #888; 
}
/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #555; 
}
/*SCROLLBAR PERSONALIZATION*/
/* ////GENERAL */
/* TYPO */
body{
    font-family: 'Montserrat', sans-serif;
    font-weight: 600;
    font-size: 12px;
}
.color-white{
    color: white;
}
.title{
    color: white;
}
/* ////TYPO */
/* SPACING */

/* ////SPACING */
/* COLORS */

/* ////COLORS */
/* HEADER */
header{
    height: 100%;
    flex-direction: column;
    background-color: black;
    align-items: center;
    flex-shrink: 0;
}
header li{
    text-decoration: none;
    padding: 5px 0;
}
header>*{
    width: 100%;
}
.header__width--xs{
    width: 60px;
}
.header__display--xs{
    display: inline-block;
}
.header__padding--xs>*{
    padding: 10px;
}
.header__display--md{
    display: none;
}
header .nav-footer{
    margin-top: auto;
}
.nav-footer li>a{
    padding:10px 0 0 0;
    align-items: center;
}
.header__icon--xs{
    width: 30px;
    height: 30px;
}
.header__icon--playlist{
    justify-content: center;
    align-items: center;
    color: black;
    font-size: 30px;
    transform: scale(1.2);
    margin-left: calc(30px * (0.2 / 1.2));
}
.header__icon--round{
    border-radius: 50%;
    overflow: hidden;
}
header span{
    align-self: center;
    padding-left: 10px;
}
header h3{
    padding-bottom: 10px;
}
.header__list--scroll{
    flex-grow: 1;
    overflow-y: scroll;
}
header .nav-footer ul{
    flex-direction: column;
}
.header__footer--align--xs{
    align-self: center;
}
/* ////HEADER */
/* NAV */
nav ul{
    height: 80px;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}
nav ul li a{
    padding: 5px;
}

/* ////NAV */
/* BANNER */
#upgrade-banner{
    width: calc(100% - 50px);
    flex-shrink: 0;
    height: 80px;
    background-color: rgba(0, 0, 0, 0.5);
    top: 0;
    right: 0;
    justify-content: flex-end;
    align-items: center;
}
#upgrade-banner button{
    border: 1px solid white;
    border-radius: 20px;
    padding: 10px 30px;
    margin-right: 30px;
    background-color: transparent;
    cursor: pointer;
    transition: transform 200ms;
}
/* ////BANNER */
/* MAIN */
main{
    padding-top: 80px;
    width: 100%;
    height: 100%;
    overflow-y: scroll;
    background-color: #141922;
}
main section, main section>*{
    padding: 10px;
}
main section .album__list{
    display: flex;
    flex-wrap: wrap;
}
main section .album__item .title{
    padding: 15px 0;
    font-size: 14px;
}
main #popular .album__item--image--container{
    border-radius: 50%;
}
/* XS */
main section .album__list>*{
    width: calc((100% - 10px)/2);
}
/*margin responsive*/
.album__list li{
    margin-right: 10px;
}
.album__list li:nth-of-type(2n) {
    margin-right: 0px;
}
main section .album__list .album__item{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}
main section .album__list .album__item--image--container{
    width: 100%;
    position: relative;
    overflow: hidden;
}
main section .album__list .album__item--image{
    width: 100%;
    display: block;
}
/* ////MAIN */
/* FOOTER */
footer i{
    font-size: 16px;
}
footer{
    height: 80px;
    justify-content: space-between;
    align-items: center;
    /* padding: 10px 0; */
    background-color: #282828;
}
footer .left, footer .right{
    width: 200px;
    align-items: center;
}
footer .left div>*{
    align-self: center;
    padding: 5px;
}
footer .left .album__item a{
    font-size: 10px;
}
footer .left img{
    width: 50px;
}
footer .right{
    justify-content: space-between;
    padding-right: 5px;
}
footer .middle{
    flex-direction: column;
    flex-grow: 1;
    max-width: 500px;
}
footer .middle .row{
    justify-content: center;
    align-items: center;
}
footer .row__player--top i{
    padding: 5px 10px;
}
footer .middle .row a>*, footer .right a>*{
    color: white;
}
footer .row__player--play>i{
    font-size: 35px;
}
footer .middle .row__player--bottom .row{
    justify-content: space-between;
}
.progressbar{
    width: 100px;
    height: 4px;
    border-radius: 2px;
    background-color: #a3a3a3;
    position: relative;
}
.progressbar--time{
    width: calc(100% - 100px);
}
.progressbar--volume{
    display: none;
}
.progressbar::after{
    content: "";
    display: block;
    height: 4px;
    width: 25%;
    border-radius: 2px;
    background-color: white;
}
/* ////FOOTER */
/*RESPONSIVE CHANGES*/
@media screen and (min-width: 600px) {
    /* HEADER RESPONSIVE */
    ::-webkit-scrollbar {
        width: 7px;
    }
    .header__width--md{
        width: 240px;
    }
    .header__display--md{
        display: inline-block;
    }
    .header__display--xs{
        display: none;
    }
    .header__padding--md>*{
        padding: 15px;
    }
    .header__border--bottom--md{
        border-bottom: 1px solid #a3a3a3;
        width: 100%;
    }
    .header__footer--align--md{
        align-self: flex-start;
    }
    .header__list--scroll{
        padding-top: 0px;
    }
    /*////HEADER RESPONSIVE*/
    /*BANNER RESPONSIVE*/
    #upgrade-banner{
        width: calc(100% - 240px);
    }
    /*////BANNER RESPONSIVE*/
    /*MAIN ITEMS RESPONSIVE*/
    /* XS OFF */
    main section .album__list>*{
        width: calc((100% - 30px)/4);
    }
    .album__list li:nth-of-type(2n) {
        margin-right: 10px;
    }
    /* MD */
    .album__list li:nth-of-type(4n) {
        margin-right: 0px;
    }
    footer .right .progressbar--volume{
        display: block;
    }
    /* ////MAIN ITEMS RESPONSIVE */
}
@media screen and (min-width:1100px){
    ::-webkit-scrollbar {
        width: 10px;
    }
    main section .album__list>*{
        width: calc((100% - 50px)/6);
    }
    /* XS OFF*/
    .album__list li:nth-of-type(2n) {
        margin-right: 10px;
    }
    /* MD OFF */
    .album__list li:nth-of-type(4n) {
        margin-right: 10px;
    }
    /* XL */
    .album__list li:nth-of-type(6n) {
        margin-right: 0px;
    }
    footer .right .progressbar--volume{
        display: block;
    }
}
/*HOOVER EFFECTS*/
#upgrade-banner button:hover{
    transform: scale(1.2);
}
header .playlist__new:hover div{
    background-color: white;
    color: black;
}
header .playlist__new:hover span{
    color: white;
}
header a>*:hover, header a:hover{
    color: white;
}
nav ul a:hover::after{
    content: "";
    display: block;
    background-color: #adff2f;
    position: absolute;
    width: 30px;
    height: 2px;
    bottom: -2px;
    left: calc(50% - 15px);
}
nav ul a:hover{
    color: white;
}
footer .row__player--play:hover{
    transform: scale(1.2);
}
footer .subtitle:hover{
    color: white;
    text-decoration: underline;
}
footer .progressbar:hover::after{
    background-color: #adff2f;
}
footer .progressbar:hover::before{
    content: "";
    display: block;
    position: absolute;
    width: 10px;
    height: 10px;
    border-radius: 5px;
    background-color: white;
    top: -3px;
    left: calc(25% - 5px);
}
footer .left i:hover{
    color: white;
}
main .album__item--image--container:hover::before{
    content:"\f144";
    font-family: "Font Awesome 5 Free";
    font-size: 50px;
    font-weight: 400;
    display: block;
    color: white;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 1;
}
main .album__item--image--container:hover::after{
    content:"";
    display: block;
    background-color: rgba(0, 0, 0, 0.5);
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

